//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  firstName String [not null]
  secondName String [not null]
  password String [not null]
  accounts Account [not null]
  userAuthCodes UserAuthCode [not null]
  transactions Transaction [not null]
}

Table UserAuthCode {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  code String [not null]
  isUsed Boolean [not null, default: false]
  userId String [not null]
  user User [not null]
}

Table Account {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  currency Currency [not null]
  accountNumber String [unique, not null]
  userId String [not null]
  user User [not null]
  sentTransactions Transaction [not null]
  receivedTransactions Transaction [not null]
}

Table Transaction {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  amount Float [not null]
  transactionType TransactionType [not null]
  fromAccountId String
  fromAccount Account
  toAccountId String
  toAccount Account
  userId String [not null]
  user User [not null]
}

Table ExRate {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  currency Currency [not null]
  exRate Float [not null]
}

Enum Currency {
  CZK
  EUR
  USD
}

Enum TransactionType {
  DEPOSIT
  WITHDRAWAL
  TRANSFER
}

Ref: UserAuthCode.userId > User.id [delete: Cascade]

Ref: Account.userId > User.id [delete: Cascade]

Ref: Transaction.fromAccountId > Account.id [delete: Cascade]

Ref: Transaction.toAccountId > Account.id [delete: Cascade]

Ref: Transaction.userId > User.id [delete: Cascade]